# Blue-screen-spelling-bee

./: .breakpoints  README.md  main.py  pyproject.toml
UI/: blue screen  main.qml
